# py-tiny-dsa

./: .gitignore  README.md  great-docs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
great-docs/: .gitignore
tests/: README.md  differential_test_exported_library.py
tests/fixtures/: tiny-dsa.xlsx
tests/results/reference/: parity_report.csv  parity_report.txt
tiny_dsa/: __init__.py  _api_helpers.py  api.py  data.py  internals.py  runtime.py
user_guide/: 01-functional-overview.qmd  02-illustrative-example.qmd  03-excel-parity-validation.qmd  index.qmd
